[package]
name = "bgp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hashbrown = "0.14"
rand = "0.8"
bgp4_serde = { path = "../bgp4_serde" }
serde = { version = "1.0", features = ["derive"] }